[package]
name = "artifice-manager"
version = "0.0.1-alpha1"
authors = ["Julian Lazaras <umbrasdracodominus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
kvm = ["virt"]
hashdatabase = ["walkdir", "tar"]

[dependencies]
networking = {path = "../networking"}
sys-info = "0.7"
rust_info = "0.3.1"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
serde-xml-rs = "*"
paillier = "0.2.0"
ipnetwork = "0.16.0"

virt = {version = "0.2.11", optional = true}
walkdir = {version = "2.3.1", optional = true}
tar = {version = "0.4.29", optional = true}
